--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/streak.gif" />
     <title>Care Tracker</title>
 </head>
-<body onload="getlocation">
+<body onload="getlocation()">
 <section class="main">
     <div class="navbar">
         <div id="logo">
