--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <button class="button">Sign Up</button>
     </div>
 </section>
-
+<script src ="index.js"></script>
 </body>
 
 </html>
