--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/streak.gif" />
+    <script type="text/javascript" src="index.js"></script>
     <title>Care Tracker</title>
 </head>
 <body onload="getlocation()">
