--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="index.js"></script>
     <title>Care Tracker</title>
 </head>
-<body onload="gtloc()">
+<body onload="glcn()">
 <section class="main">
     <div class="navbar">
         <div id="logo">
