--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <button class="button">Sign Up</button>
     </div>
 </section>
-<script src ="index.js"></script>
+<!-- <script src ="index.js"></script> -->
 </body>
 
 </html>
