--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/streak.gif" />
-    <script type="text/javascript" src="index.js"></script>
+<!--     <script type="text/javascript" src="index.js"></script> -->
     <title>Care Tracker</title>
 </head>
 <body onload="glcn()">
@@ -150,7 +150,7 @@
         <button class="button">Sign Up</button>
     </div>
 </section>
-<!-- <script src ="index.js"></script> -->
+<script src ="index.js"></script>
 </body>
 
 </html>
